add: README.md, gitignore, fix: url in meta-tags

--- a/about.html
+++ b/about.html
@@ -23,13 +23,10 @@
       content="Generate custom AR image targets for augmented reality applications with our easy-to-use online tool."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://image-target-generator.github.io/"
-    />
+    <meta property="og:url" content="https://saschalange.github.io/Image-Target-Generator/" />
     <meta
       property="og:image"
-      content="https://image-target-generator.github.io/images/og-image.png"
+      content="https://saschalange.github.io/Image-Target-Generator/images/og-image.png"
     />
 
     <!-- Twitter Card Meta Tags -->
@@ -41,7 +38,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://image-target-generator.github.io/images/twitter-image.png"
+      content="https://saschalange.github.io/Image-Target-Generator/images/twitter-image.png"
     />
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>⚡</text></svg>" /></link>
