--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
                 </li>
                 <li>Choose the border-style. (None, Black, White)</li>
                 <li>
-                  Choose between three grpahic styles (Mazzanti, Chaos, Dot
+                  Choose between three graphic styles (Mazzanti, Chaos, Dot
                   Matrix)
                 </li>
                 <li>
